added addressable fields in listing add
